--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Numans" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
 
     <title>VocabIt | Contact</title>
@@ -81,6 +82,9 @@
       <li class="nav-item">
         <a class="nav-link" href="about.html">About Me</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="bookings.html">Bookings</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -89,22 +93,22 @@
   <h1 class="text-left mt-3">Contact Information</h1>
   <hr>
   <h2>Email: <a href="mailto:khoad@sis.gl">khoad@sis.gl</a></h2>
-  <h2>Email: <span>(555)-555-5555</span></h2>
+  <h2>Email: <span class="phone">(555)-555-5555</span></h2>
   <br>
   <h2>Social media:</h2>
-  <ul class="contact-info">
-    <li><a href="#">Twitter</a></li>
-    <li><a href="#">Facebook</a></li>
-    <li><a href="#">Instagram</a></li>
+  <ul>
+    <li><a class="contact-info" href="#">Twitter</a></li>
+    <li><a class="contact-info" href="#">Facebook</a></li>
+    <li><a class="contact-info" href="#">Instagram</a></li>
   </ul>
 </div>
 
-<footer class="footer">
+<div class="footer">
   <div class="container">
     <p class="float-left">Kate Hoad</p>
     <p class="float-right">&copy; VocabIt Copyright 2018</p>
   </div>
-</footer>
+</div>
 
 
     <!-- Optional JavaScript -->
