--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Numans" rel="stylesheet">
     <link rel="stylesheet" href="css/custom.css">
 
     <title>VocabIt | About Me</title>
@@ -81,6 +82,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="about.html">About Me <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="bookings.html">Bookings</a>
+      </li>
     </ul>
   </div>
 </nav>
@@ -88,12 +92,18 @@
 <div class="container-fluid">
   <h1 class="text-left mt-3">About Me</h1>
   <hr>
-  <p class="about">My goal is to tutor those children who struggle with their learning at any age.
-I teach English Language & Literature and have worked in International schools for nearly 30 years.</p>
+  <div class="media">
+  <div class="media-body">
+    <p class="about mt-0 mb-1">My goal is to tutor those children who struggle with their learning at any age.
+  I teach English Language & Literature and have worked in International schools for nearly 30 years.</p>
 
-<p class="about">I believe I can help you to understand the English language and also help you to appreciate many different literary genres.</p>
+  <p class="about mt-0 mb-1">I believe I can help you to understand the English language and also help you to appreciate many different literary genres.</p>
 
-<p class="about">If you are interested in being tutored in a way that is suited to your needs, please <a href="contact.html">contact me.</a></p>
+  <p class="about mt-0 mb-1">If you are interested in being tutored in a way that is suited to your needs, please <a href="contact.html">contact me.</a></p>
+  </div>
+  <img class="ml-3" src="assets/boy.svg" alt="Generic placeholder image">
+  <img class="ml-3" src="assets/girl.svg" alt="Generic placeholder image">
+</div>
 </div>
 
 <footer class="footer">
